--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
@@ -11,6 +11,7 @@
                                      data-item-index="$index"
                                      data-use-type="true"
                                      data-use-labels="true"
+                                     data-is-disabled="$ctrl.isFunctionDeploying()"
                                      data-validation-rules="$ctrl.validationRules"
                                      data-all-value-types="$ctrl.isOnlyValueTypeInputs"
                                      data-action-handler-callback="$ctrl.handleAction(actionType, index)"
@@ -22,6 +23,7 @@
             </div>
         </div>
         <div class="igz-create-button create-variable-button"
+             data-ng-class="{ 'disabled': $ctrl.isFunctionDeploying() }"
              data-ng-click="$ctrl.addNewVariable($event)">
             <span class="igz-icon-add-round"></span>
             {{ 'functions:CREATE_NEW_ENVIRONMENT_VARIABLE' | i18next }}
