--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.tpl.html
@@ -16,6 +16,7 @@
                 <igz-validating-input-field data-field-type="input"
                                             data-input-name="arguments"
                                             data-input-value="$ctrl.runtimeAttributes.arguments"
+                                            data-read-only="$ctrl.isFunctionDeploying()"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="arguments"
                                             data-form-object="$ctrl.runtimeAttributesForm"
@@ -31,6 +32,7 @@
                                             data-input-name="jvmOptions"
                                             data-input-value="$ctrl.runtimeAttributes.jvmOptions"
                                             data-is-focused="false"
+                                            data-read-only="$ctrl.isFunctionDeploying()"
                                             data-form-object="$ctrl.runtimeAttributesForm"
                                             data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_OPTION_ON_EACH_LINE' | i18next }}"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
@@ -54,6 +56,7 @@
                     <ncl-key-value-input class="new-label-input"
                                          data-row-data="attribute"
                                          data-use-type="false"
+                                         data-is-disabled="$ctrl.isFunctionDeploying()"
                                          data-item-index="$index"
                                          data-action-handler-callback="$ctrl.handleAction(actionType, index)"
                                          data-change-data-callback="$ctrl.onChangeData(newData, index)"
@@ -62,6 +65,7 @@
                 </div>
             </div>
             <div class="igz-create-button create-label-button"
+                 data-ng-class="{'disabled': $ctrl.isFunctionDeploying()}"
                  data-ng-click="$ctrl.addNewAttribute($event)">
                 <span class="igz-icon-add-round"></span>
                 {{ 'functions:CREATE_NEW_RUNTIME_ATTRIBUTE' | i18next }}
