--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
@@ -1,5 +1,5 @@
 <div class="ncl-version-configuration-environment-variables">
-    <div class="title">{{ 'functions:ENVIRONMENT_VARIABLES' | i18next }}</div>
+    <div class="title">{{ 'common:ENVIRONMENT_VARIABLES' | i18next }}</div>
     <form name="$ctrl.environmentVariablesForm" class="resources-wrapper" novalidate>
         <div class="igz-scrollable-container scrollable-environment-variables"
              data-ng-scrollbars
